--- a/cyclope/apps/articles/templates/articles/article_teaser.html
+++ b/cyclope/apps/articles/templates/articles/article_teaser.html
@@ -1,4 +1,4 @@
-{% load i18n tagging_tags %}
+{% load i18n tagging_tags fb_versions %}
 
   <div class="article teaser">
     {% if  article.pretitle and not simplified_view %}
@@ -6,9 +6,9 @@
     {% endif%}
     {% if article.date %}<span class="date">{{ article.date }}</span>{% endif %}
      <h2 class="title"><a href="{% url article-detail article.slug %}">{{ article.name }}</a></h2>
-      {% if article.images.count and not simplified_view %}
+      {% if article.pictures.count and not simplified_view %}
       <a href="{% url article-detail article.slug %}">
-        <img src="{{ article.first_image.thumbnail_image.url }}" width="135" border="0"/>
+        <img src="{% version article.first_picture.image.path 'small' %}" width="135" border="0"/>
       </a>
       {% endif %}
     <p class="summary">
