--- a/cyclope/core/collections/templates/collections/collection_root_categories_teaser_list.html
+++ b/cyclope/core/collections/templates/collections/collection_root_categories_teaser_list.html
@@ -10,7 +10,7 @@
     {% endif %}
 
     {% if collection.image %}
-    <img src="{% version collection.image.path 'small' %}" width="85" border="0"/>
+    <img src="{% version collection.image.path 'small' %}" border="0"/>
     {% endif %}
 
     {% if collection.description %}
@@ -30,8 +30,5 @@
     </div>
     {% endfor %}
   </div>
-<!--  <div class="pagEspacio"></div> -->
-
-<!-- {include file="paginador.html" } -->
 
 {% endblock %}
