--- a/cyclope/templates/cyclope/themes/neutrona/base.html
+++ b/cyclope/templates/cyclope/themes/neutrona/base.html
@@ -43,6 +43,7 @@ Si modificas no borres estas lineas :)
         });
     });
     </script>
+    {% block extra_head %}{% endblock %}
   </head>
 
   <body class="{% block body_class %}{%endblock%}">
