--- a/cyclope/templates/comments/posted.html
+++ b/cyclope/templates/comments/posted.html
@@ -10,6 +10,6 @@
 
 <div id="content_container">
   <h2>{% trans "Thank you for your comment" %}.</h2>
-  <p><a href="{{ comment.content_object.get_absolute_url }}">{% trans "volver." %}</a></p>
+  <p><a href="{{ comment.content_object.get_absolute_url }}">{% trans "return." %}</a></p>
 </div>
 {% endblock %}
