change image version for collection_root_categories_teaser_list view

--- a/cyclope/core/collections/templates/collections/collection_root_categories_teaser_list.html
+++ b/cyclope/core/collections/templates/collections/collection_root_categories_teaser_list.html
@@ -10,7 +10,7 @@
     {% endif %}
 
     {% if collection.image %}
-    <img src="{% version collection.image.path 'small' %}" border="0"/>
+    <img src="{% version collection.image.path 'medium' %}" border="0"/>
     {% endif %}
 
     {% if collection.description %}
