changed jwplayer-viral for jwplayer

--- a/cyclope/apps/medialibrary/templates/medialibrary/soundtrack_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/soundtrack_detail.html
@@ -37,10 +37,12 @@
   <div id='audio'>This text will be replaced</div>
 
   <script type='text/javascript'>
-    var so = new SWFObject('/media/cyclope/jwplayer/player-viral.swf','ply','470','24','9','#ffffff');
+    var so = new SWFObject('/media/cyclope/jwplayer/player.swf','ply','470','24','9','#ffffff');
     so.addParam('allowfullscreen','true');
     so.addParam('allowscriptaccess','always');
     so.addParam('wmode','opaque');
+    so.addParam('autostart','true');
+    so.addParam('menu','false');
     so.addVariable('file','{{ media.audio }}');
     so.write('audio');
   </script>
