--- a/cyclope/apps/medialibrary/templates/medialibrary/movieclip_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/movieclip_teaser.html
@@ -4,7 +4,7 @@
     <a href="{% url movieclip-detail movieclip.slug %}">
       {% if movieclip.still %}
       <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/video.png" width="48px" border="0"/>
-      <img src="{% version movieclip.still.path 'small' %}" width="135" border="0"/>
+      <img src="{% version movieclip.still.path 'thumbnail' %}" width="135" border="0"/>
       {% else %}
       <img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/video.png" width="135" border="0"/>
       {% endif %}
