--- a/cyclope/apps/medialibrary/templates/medialibrary/soundtrack_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/soundtrack_teaser.html
@@ -4,7 +4,7 @@
     <a href="{% url soundtrack-detail soundtrack.slug %}">
       {% if soundtrack.image %}
       <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/audio.png" width="48px" border="0"/>
-      <img src="{% version soundtrack.image.path 'small' %}" width="135" border="0"/>
+      <img src="{% version soundtrack.image.path 'thumbnail' %}" width="135" border="0"/>
       {% else %}
       <img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/audio.png" width="135" border="0"/>
       {% endif %}
