--- a/cyclope/apps/articles/templates/articles/article_detail.html
+++ b/cyclope/apps/articles/templates/articles/article_detail.html
@@ -4,7 +4,7 @@
 TODO(nicoechaniz): finish adaptation from smarty to django. add trans to text that should be translated
 {% endcomment%}
 
-{% load comments i18n fb_versions %}
+{% load comments i18n fb_versions cyclope_utils %}
 
 {% block content %}
 
@@ -129,27 +129,8 @@ TODO(nicoechaniz): uncomment and fix if related articles are implemented
 
 
 <!--COMENTARIOS -->
-  {% if not article.allow_comments == 'NO' %}
-
-    {% get_comment_count for article as comment_count %}
-
-    <div id="comments">
-      <div class="top"><h6>{{ comment_count }} {% trans "Comments" %} </h6></div>
-      {% render_comment_list for article %}
-      <div class="clear"></div>
-      <div class="bottom"></div>
-
-      <!--enviar comentario -->
-      <div class="box-top"></div>
-      <div class="box">
-
-      <!--form comentario -->
-      {% render_comment_form for article %}
-
-      </div> <!-- termina box -->
-      <div class="bottom"></div>
-    </div><!--termina comments -->
-  {% endif %}
+  {% alias article as 'current_object' %}
+  {% include 'comments/comments_block.html' %}
 
 </div> <!--termina article_detail -->
 
