--- a/cyclope/apps/medialibrary/templates/medialibrary/movieclip_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/movieclip_detail.html
@@ -1,78 +1,24 @@
 {% extends host_template %}
 
-{% load comments i18n fb_versions %}
-
-{% block extra_head %}
-<script type='text/javascript' src='/media/cyclope/jwplayer/swfobject.js'></script>
-
-{% endblock %}
+{% load i18n cyclope_utils %}
 
 {% block content %}
 
-<div class="media detail">
-  <span class="tags">{% trans "Tags" %}: {{ media.tags }}</span>
- {% get_comment_count for media as comment_count %}
+{% alias media as 'current_object' %}
+{% alias media.video as 'media_file' %}
 
+<div class="movieclip media detail">
 
-  <h1 class="title">{{ media.name }}</h1>
-  <!-- herramientas -->
-  <div class="tools">
-    <ul>
-      {% if comment_count %}
-      <li>
-        <a href="#comments" class="comments_link">Comentarios ({{ comment_count }})</a>
-      </li>
-      {% endif %}
-    </ul>
-  </div>
-  <!-- /herramientas -->
+  {% include 'medialibrary/media_detail_header.html' %}
 
-
-  <!-- author -->
-  {% if media.author %}
-  <span id="author">
-    <span class="author">{% trans "By"%} {{ media.author }}</span>
-  </span>
-  {% endif %}
-  <!-- /autor -->
-
-  <div id='video'>This text will be replaced</div>
-
-  <script type='text/javascript'>
-    var so = new SWFObject('/media/cyclope/jwplayer/player.swf','ply','470','320','9','#ffffff');
-    so.addParam('allowfullscreen','true');
-    so.addParam('allowscriptaccess','always');
-    so.addParam('wmode','opaque');
-    so.addVariable('file','{{ media.video }}');
-    so.write('video');
-  </script>
-
-  <span id="download_link"><a href="{{ media.video }}">{% trans "download file" %}</a></span>
+  {% assign player_height '320' %}
+  {% include 'medialibrary/media_player.html' %}
 
   <span class="text">{{ media.description|safe }}</span>
 
-<!--COMENTARIOS -->
+  <!--COMENTARIOS -->
+  {% include 'comments/comments_block.html' %}
 
-  {% if not media.allow_comments == 'NO' %}
-    {% get_comment_count for media as comment_count %}
-
-    <div id="comments">
-      <div class="top">
-        <h6>Comentarios</h6>
-      </div>
-      <div class="bottom"></div>
-      {% render_comment_list for media %}
-      <!--enviar comentario -->
-      <div class="box-top"></div>
-      <div class="box">
-
-      <!--form comentario -->
-      {% render_comment_form for media %}
-
-      </div> <!-- termina box -->
-      <div class="bottom"></div>
-    </div><!--termina comments -->
-  {% endif %}
 </div> <!--termina media_detail -->
 
 {% endblock content%}
