--- a/cyclope/apps/medialibrary/templates/medialibrary/flashmovie_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/flashmovie_detail.html
@@ -10,10 +10,18 @@
 
   {% include 'medialibrary/media_detail_header.html' %}
 
-<object type="application/x-shockwave-flash" data="{{ media.flash}}"
-uality="high" bgcolor="#10153f" align="middle" allowScriptAccess="sameDomain" allowFullScreen="true" type="application/x-shockwave-flash" pluginspage="http://www.adobe.com/go/getflashplayer" >
-  <param name="movie" value="{{ media.flash}}" />
-</object>
+  <div style="display: block; height: 550px; cursor: pointer; border: thin black solid;" onclick="alert('aaaa')">
+    <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=10,0,0,0" width="100%" height="100%" id="curso-el-video" align="middle">
+          <param name="allowScriptAccess" value="sameDomain" />
+          <param name="allowFullScreen" value="true" />
+          <param name="movie" value="{{ media.flash}}" />
+          <param name="quality" value="high" />
+          <param name="bgcolor" value="#fed0a3" />
+          <embed src="{{ media.flash}}" quality="high" bgcolor="#fed0a3" width="100%" height="100%" name="curso-el-video" align="middle" allowScriptAccess="sameDomain" allowFullScreen="false" type="application/x-shockwave-flash" pluginspage="http://www.adobe.com/go/getflashplayer_es" />
+    </object>
+  </div>
+
+  <a>
 
   <span class="text">{{ media.description|safe }}</span>
 
