flashmovie detail view movie parameters

--- a/cyclope/apps/medialibrary/templates/medialibrary/media_detail_header.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/media_detail_header.html
@@ -1,7 +1,9 @@
 {% load i18n comments %}
 
+  {% if media.tags %}
   <span class="tags">{% trans "Tags" %}: {{ media.tags }}</span>
-
+  {% endif %}
+  
   <h1 class="title">{{ current_object.name }}</h1>
 
   <!-- herramientas -->
