--- a/cyclope/apps/medialibrary/templates/medialibrary/flashmovie_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/flashmovie_detail.html
@@ -16,11 +16,12 @@
           <param name="allowFullScreen" value="true" />
           <param name="movie" value="{{ media.flash}}" />
           <param name="quality" value="high" />
-          <embed src="{{ media.flash}}" quality="high" width="100%" height="100%" name="curso-el-video" align="middle" allowScriptAccess="sameDomain" allowFullScreen="false" type="application/x-shockwave-flash" pluginspage="http://www.adobe.com/go/getflashplayer_es" />
+          <param name="base" value="{{ url_base }}" />
+          <embed src="{{ media.flash}}" quality="high" width="100%" height="100%" name="curso-el-video" align="middle" allowScriptAccess="sameDomain" allowFullScreen="false" type="application/x-shockwave-flash" pluginspage="http://www.adobe.com/go/getflashplayer_es" base="{{ url_base }}"/>
     </object>
   </div>
 
-  <span class="download_link"><a href="{{ media.flash }}">{% trans "full screen view (new window)"%}</a></span>
+  <span class="download_link"><a target="_blank" href="{{ media.flash }}">{% trans "full screen view (new window)"%}</a></span>
 
   <span class="text">{{ media.description|safe }}</span>
 
