--- a/cyclope/apps/medialibrary/templates/medialibrary/soundtrack_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/soundtrack_teaser.html
@@ -1,6 +1,6 @@
-{% load i18n tagging_tags fb_versions %}
+{% load fb_versions %}
 
-  <div class="media teaser">
+  <div class="media teaser soundtrack">
     <a href="{% url soundtrack-detail soundtrack.slug %}">
       {% if soundtrack.image %}
       <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/audio.png" width="48px" border="0"/>
