--- a/cyclope/apps/medialibrary/templates/medialibrary/movieclip_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/movieclip_teaser.html
@@ -1,6 +1,6 @@
-{% load i18n tagging_tags fb_versions %}
+{% load fb_versions %}
 
-  <div class="media teaser">
+  <div class="media teaser movieclip">
     <a href="{% url movieclip-detail movieclip.slug %}">
       {% if movieclip.still %}
       <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/video.png" width="48px" border="0"/>
