--- a/cyclope/apps/articles/templates/articles/article_teaser.html
+++ b/cyclope/apps/articles/templates/articles/article_teaser.html
@@ -23,7 +23,7 @@
         <span class="tags">
           <h3>
           {% trans "Tags" %}:
-          {% tag_cloud_for_model articles.Article as article_tags with min_count=1 distribution=log %}
+          {% tags_for_object article as article_tags %}
           {% for tag in article_tags %}
             <!--<a href="/tag/{{ tag.name|slugify }}" class="tag">{{tag.name}}</a>-->
             {{tag.name}}{% if not forloop.last%},{% endif%}
