modified External Content teaser view

--- a/cyclope/apps/medialibrary/templates/medialibrary/externalcontent_teaser.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/externalcontent_teaser.html
@@ -1,18 +1,34 @@
-{% load fb_versions %}
+{% load i18n tagging_tags fb_versions %}
 
-  <div class="media teaser externalcontent">
+  <div class="externalcontent teaser">
+    <h2 class="title">
       <a href="{% if externalcontent.skip_detail %}{{ externalcontent.content_url }}{% else %} {% url externalcontent-detail externalcontent.slug %}{% endif%}" {% if externalcontent.new_window %}target="_blank"{% endif%}>
-      {% if externalcontent.image %}
-      <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/external.png" width="48px" border="0"/>
-      <img src="{% version externalcontent.image.path 'thumbnail' %}" width="135" border="0"/>
-      {% else %}
-      <img class="icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/external.png" width="135" border="0"/>
-      {% endif %}
+        {{ externalcontent.name }}
+      </a>
+    </h2>
+    {% if externalcontent.image %}
+      <a href="{% if externalcontent.skip_detail %}{{ externalcontent.content_url }}{% else %} {% url externalcontent-detail externalcontent.slug %}{% endif%}" {% if externalcontent.new_window %}target="_blank"{% endif%}>
+        <img src="{% version externalcontent.image.path 'small' %}" width="135" border="0"/>
+    </a>
+    {% endif %}
 
-    </a>
-    <span class="label">
-      <a href="{% if externalcontent.skip_detail %}{{ externalcontent.content_url }}{% else %} {% url externalcontent-detail externalcontent.slug %}{% endif%}" {% if externalcontent.new_window %}target="_blank"{% endif%}>
-      {{ externalcontent.name }}
-    </a>
-    </span>
+    {% if externalcontent.description %}
+    <p class="summary">
+      {{ externalcontent.description }}
+    {% if not externalcontent.skip_detail %}
+      <a href="{% url externalcontent-detail externalcontent.slug %}{">
+      {% trans "More"%}
+      </a>
+    {% endif %}
+    </p>
+    {% endif %}
+
+    {% if externalcontent.skip_detail %}
+    <p>
+      <br/>
+      <a href="{{ externalcontent.content_url }}" {% if externalcontent.new_window %}target="_blank"{% endif%}>
+      {% trans "Open external content"%} {% if externalcontent.new_window %}{% trans " (in new window)"%}{% endif%}
+      </a>
+    </p>
+    {% endif %}
   </div>
