--- a/cyclope/core/collections/templates/collections/collection_root_categories_teaser_list.html
+++ b/cyclope/core/collections/templates/collections/collection_root_categories_teaser_list.html
@@ -10,7 +10,7 @@
     {% endif %}
 
     {% if collection.image %}
-    <img src="{% version collection.image.path 'medium' %}" border="0"/>
+    <img class="teaser_icon" src="{% version collection.image.path 'medium' %}" border="0"/>
     {% endif %}
 
     {% if collection.description %}
@@ -23,12 +23,23 @@
 
     <div class="category teaser">
       <h2 class="title"><a href="{% url category-teaser_list category.slug %}">{{ category.name }}</a></h2>
+      {% if category.image %}
+      <a href="{% url category-teaser_list category.slug %}">
+        <img src="{% version category.image.path 'thumbnail' %}" border="0"/>
+      </a>
+      {% endif %}
+
       <div class="text">
         {{ category.description|safe }}
       </div>
+
+      {% if category.image %}
+      <div class="clear_right"></div>
+      {% endif %}
       <div class="bottom"></div>
     </div>
     {% endfor %}
+
   </div>
 
 {% endblock %}
