added migrations support. moved author and source models from articles to cyclope. sorted select options for content types and region names in admin interface

--- a/cyclope/apps/articles/templates/articles/article_detail.html
+++ b/cyclope/apps/articles/templates/articles/article_detail.html
@@ -63,7 +63,7 @@ TODO(nicoechaniz): finish adaptation from smarty to django. add trans to text th
   <!-- author -->
   {% if article.author %}
   <span id="author">
-    {% if article.author.photo %}
+    {% if article.author.image %}
     <img src="" width="60"  />
     {% endif %}
     <span class="author">{% trans "By"%} {{ article.author }}</span>
