--- a/cyclope/templates/registration/registration_form.html
+++ b/cyclope/templates/registration/registration_form.html
@@ -4,10 +4,10 @@
 {% block page_content%}
 
 <div id="content_container">
-  <div id="comments">
-    <h3>
+  <div class="user_input">
+    <h6>
       {% trans "Please fill in your user profile data" %}
-    </h3>
+    </h6>
     <form action="" method="post">{% csrf_token %}
 
     {{ form }}
