--- a/cyclope/core/collections/templates/collections/category_root_items_list.html
+++ b/cyclope/core/collections/templates/collections/category_root_items_list.html
@@ -2,12 +2,14 @@
 
 {% block content %}
 
-
+{% comment %}
+TODO(nicoechaniz): adapt this view to work in the same way as category_teaser_list, by providing a [content_type]_listing_view.html (or whatever better name) for every base content type, like we do with [content_type]_teaser.html
+{% endcomment %}
 
 <ul>
 {% for cm in category_maps %}
   <li>
-    <a href="/{{CYCLOPE_PREFIX}}{{ cm.content_type.app_label }}/{{ cm.content_type.model }}/{{ cm.content_object.slug }}/View/detail">
+    <a href="/{{CYCLOPE_PREFIX}}{{ cm.content_type.app_label }}/{{ cm.content_type.model }}/{{ cm.content_object.slug }}">
       <span>{{ cm.content_object.name }}</span>
     </a>
   </li>
