--- a/cyclope/templates/cyclope/themes/neutrona/base.html
+++ b/cyclope/templates/cyclope/themes/neutrona/base.html
@@ -49,6 +49,7 @@ Si modificas no borres estas lineas :)
   <body class="{% block body_class %}{%endblock%}">
 
     <div id="page_wrapper">
+      {% include 'registration/user_block.html'%}
       {% region 'header' %}
 
       <!-- cabezal -->
