replaced ugettext for ugettext_lazy everywhere

--- a/cyclope/templates/cyclope/themes/neutrona/base.html
+++ b/cyclope/templates/cyclope/themes/neutrona/base.html
@@ -91,7 +91,7 @@ Si modificas no borres estas lineas :)
             </div>
           </div>
 
-          <div id="rss"><a href="/rss">Suscripción RSS</a></div>
+          <div id="rss"><a href="/rss">{% trans "Subscribe to RSS" %}</a></div>
           <!-- banners -->
           <div id="banners">
             <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.es_CO" target="_blank">
