--- a/cyclope/apps/articles/templates/articles/article_detail.html
+++ b/cyclope/apps/articles/templates/articles/article_detail.html
@@ -20,10 +20,10 @@ TODO(nicoechaniz): finish adaptation from smarty to django. add trans to text th
   <!-- herramientas -->
   <div class="tools">
     <ul>
-      <li><a href="javascript:window.print()" class="print">Imprimir</a></li>
+      <li><a href="javascript:window.print()" class="print">{% trans "Print" %}</a></li>
       <li>
         <a href="/share?slug={{ article.slug }}" onclick="abrir_popup(this);return false" class="share">
-          Compartir
+          {% trans "Share" %}
         </a>
       </li>
 
