--- a/cyclope/templates/profiles/edit_profile.html
+++ b/cyclope/templates/profiles/edit_profile.html
@@ -15,7 +15,7 @@
       {{ field.label_tag }}
       {% if field.help_text %}<span class="help">{{ field.help_text }}</span> <br/> {% endif%}
       {{ field.errors }}
-      {% if field.name ==  "avatar" %}
+      {% if field.name ==  "avatar" and profile.avatar %}
         <img src="{{MEDIA_URL}}/{{ profile.avatar }}" alt=""></img>
       {% endif %}
 
