fixed numerous translation issues related to the use of gettext_lazy

--- a/cyclope/templates/contact_form/contact_form_sent.html
+++ b/cyclope/templates/contact_form/contact_form_sent.html
@@ -3,7 +3,6 @@
 
 {% block content %}
 <h3>
-{% trans "Thanks to contact us!" %}
+{% trans "Thank you for contacting us!" %}
 </h3>
 {% endblock content%}
-
