--- a/cyclope/templates/comments/form.html
+++ b/cyclope/templates/comments/form.html
@@ -22,6 +22,6 @@
     {% endif %}
   {% endfor %}
   <p class="submit">
-    <input type="submit" name="post" class="submit" value="{% trans "Post you comment" %}" />
+    <input type="submit" name="post" class="submit" value="{% trans "Post your comment" %}" />
   </p>
 </form>
